--- a/color palette/templates/index.html
+++ b/color palette/templates/index.html
@@ -8,10 +8,19 @@
       h1 {
         color: brown;
       }
+      .container {
+        background-color: black;
+        width: 100%;
+        height: 100vh;
+      }
+      .color {
+        height: 100%;
+      }
     </style>
   </head>
   <body>
     <h1>Hellow bre</h1>
+    <div class="container"></div>
     <form id="form">
       <input type="text" name="query" />
       <button>Submit</button>
@@ -32,7 +41,19 @@
           }),
         })
           .then((result) => result.json())
-          .then(console.log);
+          .then((data) => {
+            const colors = data.colors;
+            const container = document.querySelector('.container');
+            colors &&
+              colors.forEach((color) => {
+                const div = document.createElement('div');
+
+                div.style.backgroundColor = color;
+                div.classList.add('color');
+                div.style.width = `calc(100%/${colors.length})`;
+                container.appendChild(div);
+              });
+          });
       });
     </script>
   </body>
