--- a/color palette/templates/index.html
+++ b/color palette/templates/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Palette Generator</title>
     <style>
-      h1 {
-        color: brown;
-      }
       .container {
         background-color: black;
         width: 100%;
         height: 100vh;
+        display: flex;
       }
       .color {
         height: 100%;
@@ -19,7 +17,6 @@
     </style>
   </head>
   <body>
-    <h1>Hellow bre</h1>
     <div class="container"></div>
     <form id="form">
       <input type="text" name="query" />
@@ -44,13 +41,22 @@
           .then((data) => {
             const colors = data.colors;
             const container = document.querySelector('.container');
+            container.innerHTML = '';
             colors &&
               colors.forEach((color) => {
                 const div = document.createElement('div');
-
                 div.style.backgroundColor = color;
                 div.classList.add('color');
                 div.style.width = `calc(100%/${colors.length})`;
+
+                div.addEventListener('click', () => {
+                  navigator.clipboard.writeText(color);
+                });
+
+                const span = document.createElement('span');
+                span.innerText = color;
+                div.appendChild(span);
+
                 container.appendChild(div);
               });
           });
