--- a/color palette/templates/index.html
+++ b/color palette/templates/index.html
@@ -2,65 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Palette Generator</title>
-    <style>
-      .container {
-        background-color: black;
-        width: 100%;
-        height: 100vh;
-        display: flex;
-      }
-      .color {
-        height: 100%;
-      }
-    </style>
+
+    <link rel="stylesheet" href="app.css" />
   </head>
+
   <body>
     <div class="container"></div>
+
     <form id="form">
       <input type="text" name="query" />
-      <button>Submit</button>
+      <button class="btn">Submit</button>
     </form>
-    <script>
-      const form = document.getElementById('form');
-      form.addEventListener('submit', function (event) {
-        event.preventDefault();
-        const query = form.elements.query.value;
 
-        fetch('/pallete', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/x-www-form-urlencoded',
-          },
-          body: new URLSearchParams({
-            query: query,
-          }),
-        })
-          .then((result) => result.json())
-          .then((data) => {
-            const colors = data.colors;
-            const container = document.querySelector('.container');
-            container.innerHTML = '';
-            colors &&
-              colors.forEach((color) => {
-                const div = document.createElement('div');
-                div.style.backgroundColor = color;
-                div.classList.add('color');
-                div.style.width = `calc(100%/${colors.length})`;
-
-                div.addEventListener('click', () => {
-                  navigator.clipboard.writeText(color);
-                });
-
-                const span = document.createElement('span');
-                span.innerText = color;
-                div.appendChild(span);
-
-                container.appendChild(div);
-              });
-          });
-      });
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
